k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: absuite
  labels:
    name: absuite
    app.kubernetes.io/name: absuite
    app.kubernetes.io/version: "2.0.0"
